--- a/src/components/TodoList/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoList/TodoItem/TodoItem.module.scss
@@ -16,20 +16,40 @@
     display: flex;
     justify-content: space-between;
 
-    .delete {
-      font-size: 28px;
-      font-weight: 600;
-      margin: 0px 10px;
-      cursor: pointer;
-      width: 40px;
-      background-color: transparent;
-      height: 40px;
-      color: white;
-      border: 3px solid white;
-      border-radius: 30px;
+    .buttonBlock {
       display: flex;
-      justify-content: center;
-      align-items: center;
+
+      .delete {
+        font-size: 28px;
+        font-weight: 600;
+        margin: 0px 10px;
+        cursor: pointer;
+        width: 40px;
+        background-color: transparent;
+        height: 40px;
+        color: white;
+        border: 3px solid white;
+        border-radius: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .edit {
+        font-size: 12px;
+        font-weight: 600;
+        margin: 0px 10px;
+        cursor: pointer;
+        width: 40px;
+        background-color: transparent;
+        height: 40px;
+        color: white;
+        border: 3px solid white;
+        border-radius: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
